2011-02-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-unprotected): Create the configuration
	menu only once at startup.

2011-02-22  Desmond O. Chang <dochang@gmail.com>

	* contrib/amixer.lisp: Add a volume mode inspired by the emms
	volume package. Alsa mixer interface.

	* contrib/volume-mode.lisp: Add a volume mode inspired by the emms
	volume package.

2011-02-22 Desmond O. Chang <dochang@gmail.com>

	* src/clfswm.lisp (main): Use ASDF:SYSTEM-SOURCE-DIRECTORY instead
	of *LOAD-TRUENAME*. *LOAD-TRUENAME* is only bound during a call to
	LOAD. If one eval CLFSWM:MAIN in repl, BASE-DIR will be an empty
	string. Use ASDF:SYSTEM-SOURCE-DIRECTORY to fix it.

2011-02-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-unprotected): Add a close hook. And close
	the notify window, the virtual keyboard and the clfswm terminal by
	default.

2011-02-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-unprotected): Destroy the notify window
	before closing the display. This fix a bug when resetting/reloading
	clfswm.

2011-02-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (equal-wm-class-fun, equal-wm-name-fun)
	(raise-window-fun, raise-and-focus-window-fun): New functions.

	* src/config.lisp (*clfswm-terminal-cmd*): Switch from xterm to
	urxvt.
	(*never-managed-window-list*): Structure change to be more
	flexible. Let the choice to focus, raise and do nothing on never
	managed windows.

2011-02-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (mouse-focus-move/resize-generic): Take
	care of never managed windows to move or resize them if the raise
	parameter is true.

	* src/clfswm-internal.lisp (in-frame, in-window, in-child): New
	functions.

2011-02-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-mode): Raise or not unmanaged windows
	following request in *never-managed-window-list*.
