@@ -1,3 +1,9 @@
+2011-02-26  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-configuration.lisp
+	(add-all-configuration-default-value): Add a default value to
+	configurable variables.
+
 2011-02-23  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm.lisp (main-unprotected): Create the configuration
